DownloadManager: Improved vacant thumbnail downloading, including l10n fixes. * Fix error handling in DownloadUtils.multipleHelper * No longer use thumbnail_check, check the thumbnail every time when open the panel. * Write empty string in thumbnail_file if video is deleted. * Re-initialize the same timer to avoid timer stopped working after too much items. * Retry the thumbnail item for one time for each item. * Simplify Panel UI and l10n fixes.

--- a/skin/smilefox.css
+++ b/skin/smilefox.css
@@ -109,7 +109,7 @@ richlistitem[type="smilefox"][sfstatus="7"] {
 }
 
 #smilefoxThumbNotice, #smilefoxThumbProgress {
-  padding: 0.5em;
+  padding: 0.2em;
   background: InfoBackground;
   color: InfoText;
 }
